# ttcore-clip-preparer

./: .gitignore  Cargo.toml  Cross.toml  LICENSE.md  README.md  mise.toml
.cargo/: config.toml
.github/workflows/: release.yaml
src/: api.rs  burner.rs  cli.rs  config.rs  download.rs  fs.rs  main.rs  update.rs
src/api/: client.rs  clips.rs  mod.rs  videos.rs
src/burner/: consts.rs  credits.rs  intro_text.rs  mod.rs  outro_text.rs  utils.rs
src/commands/: burn_credits.rs  burn_single_clip.rs  clip_count.rs  download.rs  list_videos.rs  mod.rs  total_length.rs
