[package]
name = "ttcore-clip-preparer"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
config = "0.15.19"
convert_case = "0.11.0"
futures-util = "0.3.32"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
url = { version = "2.5.8", features = ["serde"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
