[package]
name = "ttcore-clip-preparer"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
convert_case = "0.11.0"
futures-util = "0.3.32"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
self_update = { version = "0.42.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
tabled = { version = "0.20.0", features = ["ansi"] }
tokio = { version = "1.51.0", features = ["fs", "macros", "rt-multi-thread"] }
toml = "1.1.2"
url = { version = "2.5.8", features = ["serde"] }

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# --- Global Lint Rules ---
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Set broad groups to a lower priority (-1) so exceptions can override them
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Catch common panic-inducing methods
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"

# --- Lint Exceptions ---
# (These implicit priority 0 lints will now successfully override the -1 groups above)
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
